# ux-journey-scraper

./: .codecov.yml  .flake8  .gitignore  BUILD_PROGRESS.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  MIGRATION.md  MOBILE_NATIVE_PLAN.md  Makefile  PRIVACY_COMPLIANCE.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_android_test.sh  run_full_scrape.sh  run_ios_test.sh  scrape-config-native-android-test.yaml  scrape-config-native-ios-test.yaml  scrape-config.example.yaml  setup.py
.github/: CI_CD_SETUP.md
.github/workflows/: ci.yml
archive/: BUILD_PROGRESS.md  CHALLENGE_ANALYSIS.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  PROJECT_STATUS.md  PYPI_READINESS.md  README.md  UX_VALIDATION_INTEGRATION.md  release-notes-v0.1.0.md
archive/examples/: ux_validation_example.py
examples/: architecture_detection_demo.py  comprehensive_ux_testing_example.py  config_with_ux_validation.yaml  platform_discovery_demo.py  ux_validation_example.py
scripts/: pre-publish-check.sh  publish_to_pypi.sh
tests/: __init__.py  test_anti_crawler_detector.py  test_autonomous_crawler.py  test_design_data_collector.py  test_native_modules.py  test_page_classifier.py  test_page_selector.py  test_recorder.py  test_session_components.py  test_ux_validation.py  test_webkit_engine.py
ux_journey_scraper/: __init__.py  journey_loader.py
ux_journey_scraper/analyzers/: __init__.py  journey_flow.py  ux_analyzer.py
ux_journey_scraper/cli/: __init__.py  main.py
ux_journey_scraper/config/: __init__.py  scrape_config.py
ux_journey_scraper/core/: __init__.py  anti_crawler_detector.py  app_architecture_detector.py  app_provisioner.py  appium_crawler.py  appium_session.py  auth_manager.py  autonomous_crawler.py  cdp_element_detector.py  compliance_data_collector.py  cookie_jar.py  crawl_orchestrator.py  crawlee_adapter.py  design_data_collector.py  element_intelligence.py  engine_picker.py  form_filler.py  gesture_engine.py  human_behaviour.py  journey_recorder.py  mobile_state_registry.py  native_element_detector.py  navigation_behaviour.py  navigation_queue.py  page_analyzer.py  page_classifier.py  page_readiness.py  page_selector.py  persistent_queue.py  platform_discovery.py  proxy_rotator.py  robots_checker.py  screenshot_manager.py  session_planner.py  sitemap_parser.py  state_registry.py  stealth_browser.py
ux_journey_scraper/reporters/: __init__.py  html_reporter.py  json_reporter.py
ux_journey_scraper/validators/: __init__.py  baymard_validator.py  guideline_index.py  ux_tester_integration.py
