[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ux-journey-scraper"
version = "0.5.0"
description = "Autonomous web crawler for capturing user journeys"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rishabh Patel", email = "rp87704@gmail.com"}
]
keywords = ["ux", "user-experience", "journey", "scraper", "playwright", "testing", "guidelines", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "urllib3>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
native = [
    "Appium-Python-Client>=3.1.0",
    "google-play-scraper>=1.2.0",
    "imagehash>=4.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/resabh/ux-journey-scraper"
Documentation = "https://github.com/resabh/ux-journey-scraper#readme"
Repository = "https://github.com/resabh/ux-journey-scraper"
"Bug Tracker" = "https://github.com/resabh/ux-journey-scraper/issues"
Changelog = "https://github.com/resabh/ux-journey-scraper/blob/main/CHANGELOG.md"

[project.scripts]
ux-journey = "ux_journey_scraper.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ux_journey_scraper*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
source = ["ux_journey_scraper"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
